--- a/Property FW and wreath products/Medians/Enseignement Math/MedianV4.tex
+++ b/Property FW and wreath products/Medians/Enseignement Math/MedianV4.tex
@@ -254,7 +254,7 @@ Then $G\wr_XH$ has property~\FA{} (respectively has property~\FR) if and only if
 %
 \paragraph{Acknowledgment}
 The authors are thankful to P. de la Harpe, A. Genevois, T. Nagnibeda and A. Valette for helpful comments and to the NSF for its support.
-They also gratefully  thank the anonymous referee for their valuable remarks.
+They also gratefully  thank the anonymous referees for their valuable remarks.
 %
 %
 %
