--- a/Property FW and wreath products/Medians/Enseignement Math/MedianV4.tex
+++ b/Property FW and wreath products/Medians/Enseignement Math/MedianV4.tex
@@ -236,7 +236,7 @@ Then the wreath product $G \wr_X H$ has uncountable cofinality if and only if $G
 %
 %
 A crucial ingredient of our proofs is that the spaces under consideration admit a natural notion of Cartesian product.
-In particular, some of our results do not work for trees and property~\FA, neither for real trees and the corresponding property~\FR.
+In particular, some of our results do not work for trees and property~\FA, nor do they for real trees and the corresponding property~\FR.
 Nevertheless, we are still able to show that if $G\wr_XH$ has property~\FA, then $H$ acts on $X$ with finitely many orbits.
 Combining this with Theorem~\ref{Thm:FACK} we obtain
 \begin{mainthm}\label{Thm:FAFiniteOrbits}
@@ -308,7 +308,7 @@ by $(h.\varphi)(x)=\varphi(h^{-1}.x)$.
 This leads to the following standard definition
 \begin{defn}\label{Def:WreathProd}
 Let $G$ and $H$ be groups and $X$ be a set on which $H$ acts.
-The \emph{(restricted \footnote{There exists an unrestricted version of this product where the direct sum is remplaced by a direct product.}) wreath product} $G\wr_XH$ is the group $(\bigoplus_XG)\rtimes H$.
+The \emph{(restricted \footnote{There exists an unrestricted version of this product where the direct sum is replaced by a direct product.}) wreath product} $G\wr_XH$ is the group $(\bigoplus_XG)\rtimes H$.
 \end{defn}
 A prominent particular case of wreath products is of the form $G\wr_HH$, where $H$ acts on itself by left multiplication.
 They are sometimes called \emph{standard wreath products} or simply \emph{wreath products}, while general $G\wr_XH$ are sometimes called \emph{permutational wreath products}.
@@ -333,14 +333,14 @@ Other (trivial) examples of wreath products are direct products $G\times H$ whic
 %
 %
 %
-In this subsection we discuss some classical group properties which are defined by actions with bounded orbits on various metric spaces.
+In this subsection we discuss some classical group properties, which are defined by actions with bounded orbits on various metric spaces.
 
 \paragraph{Median graphs}
 For $u$ and $v$ two vertices of a connected\footnote{We will always assume that our connected graphs are non-empty. This is coherent with the definition that a connected graph is a graph with exactly one connected component.} graph $\mathcal G$, we define the total interval $[u,v]$ as the set of vertices that lie on some shortest path between $u$ and $v$.
 A connected graph $\mathcal G$ is \emph{median} if for any three vertices $u$, $v$, $w$, the intersection $[u,v]\cap[v,w]\cap[u,w]$ consists of a unique vertex, denoted $m(u,v,w)$.
 A graph is \emph{median} if each of its connected components is median. For more on median graphs and spaces see~\cite{MR2405677,MR2671183,MR1705337}.
 If $X$ and $Y$ are both (connected) median graphs, then their Cartesian product is also a (connected) median graph.
-The class of median graphs was intruduced by Nebesk\'y in 1971 \cite{Neb71} and Gerasimov \cite{Ger97, MR1663779},   Roller \cite{Rol98} and Chepoï \cite{Che00} realized independently that this class coincides with the class of $1$-skeleta of CAT(0) cube complexes.
+The class of median graphs was introduced by Nebesk\'y in 1971 \cite{Neb71} and Gerasimov \cite{Ger97, MR1663779},   Roller \cite{Rol98} and Chepoï \cite{Che00} realized independently that this class coincides with the class of $1$-skeleta of CAT(0) cube complexes.
 Trees are the simplest examples of connected median graphs, while the ensuing classical example show that any power set can be endowed with a median graph structure.
 %
 %
@@ -528,7 +528,7 @@ A group $G$ has property~\BS{} if and only if for every subgroup $H$ the pair $(
 \subsection{Groups acting with bounded orbits on \CatS-spaces}\label{SubSec:CatS}
 It is possible to define other properties in the spirit of Definition~\ref{Def:FHFA} for any ``subclass of metric spaces'', or more precisely for any subcategory of pseudo-metric spaces.
 %In order to give a uniform treatment of all of them, we will use the notion of pseudo-metric spaces and the language of category theory.
-A reader not familiar with category theory and interested only in one specific subclass of metric spaces may forget all these general considerations and only verify that the arguments of Section~\ref{Section:Proof} apply for their favorite subclass of metric spaces.
+A reader not familiar with category theory and interested only in one specific subclass of metric spaces may forget all these general considerations and only verify that the arguments of Section~\ref{Section:Proof} apply for their favourite subclass of metric spaces.
 %
 %
 \begin{defn}\label{Def:Distance}
@@ -564,7 +564,7 @@ A \emph{$G$ action on an \CatS-space} $X$ is simply a group homomorphism $\alpha
 
 In practice, a lot of examples of (full) subcategories of \PMet{} are already subcategories of $\category{Met}$.
 Obvious examples of full subcategories of $\category{Met}$ include metric spaces and ultrametric spaces (with short maps).
-Affine real Hilbert and Banach spaces and more generally normed vector spaces (with affine maps) are also full subcategories of $\category{Met}$ if we restrict ourself to morphisms that do not increase the norm (that is such that  $\|f(x)\|\leq\| x\|$).
+Affine real Hilbert and Banach spaces and more generally normed vector spaces (with affine maps) are also full subcategories of $\category{Met}$ if we restrict ourselves to morphisms that do not increase the norm (that is such that  $\|f(x)\|\leq\| x\|$).
 In particular, for us isomorphisms of Hilbert and Banach spaces will always be affine isometries.
 
 For connected graphs (and hence for its full subcategories of connected median graphs and of trees), one looks at the category $\category{Graph}$ where objects are connected simple graphs $G=(V,E)$ and where a morphism $f\colon (V,E)\to(V',E')$ is a function between the vertex sets such that if $(x,y)$ is an edge then either $f(x)=f(y)$ or $(f(x),f(y))$ is an edge.
@@ -692,7 +692,7 @@ with the convention that a sum with uncountably non-zero summands is infinite.
 %
 %
 If $I$ is finite, then $d_p$ is a distance on $\prod_{i\in I}X_i$. Moreover, it is compatible with the bornology in the sense that if $E\subseteq X$ is unbounded, then the diagonal $\diag(E)\subset X^n$ is also unbounded.
-The following definition generalize this comportement to other distances.
+The following definition generalizes this comportement to other distances.
 %
 %
 \begin{defn}[Axiom (A2)]\label{Def:Cartesian}
@@ -708,7 +708,7 @@ If $E\subset X$ is unbounded, then the diagonal $\diag(E)\subset X^n$ is unbound
 \end{defn}
 %
 %
-A good heuristic is that your favorite subcategory of \PMet{} would satisfies axiom (A2) in the above sense if and only if it already has a classical operation which is called \emph{Cartesian product}.
+A good heuristic is that your favourite subcategory of \PMet{} would satisfies axiom (A2) in the above sense if and only if it already has a classical operation which is called \emph{Cartesian product}.
 An \CatS-object satisfying the first two properties of Definition~\ref{Def:Cartesian} will be called a finite Cartesian power.
 
 For metric spaces (of finite diameter), the categorical product (corresponding to the metric $d_\infty=\max\{d_X,d_Y\}$) works fine, but any product metric of the form $d_p=(d_X^p+d_Y^p)^{\frac1p}$ for $p\in[1,\infty]$ works as well.
@@ -743,8 +743,8 @@ It is straightforward to verify that $\bigoplus_{i\in I} X_i\subseteq\bigoplus_{
 Moreover the restriction of the map $d_p$ to $\bigoplus_{i\in I}^p X_i$ is a distance.
 While $(\bigoplus_{i\in I} X_i, d_p)$ is a metric space, it is in general not complete even when the $X_i$ are complete, which is why we needed to define $\bigoplus_{i\in I}^p X_i$; this will be important for Banach and Hilbert spaces.
 
-One commun feature of the product distances $d_p$ for $p\neq\infty$ is that, in some rough way, they are able to detect the number of coordinates on which $f$ differs from $f_0$.
-Our last axiom will generalize this comportement.
+One common feature of the product distances $d_p$ for $p\neq\infty$ is that, in some rough way, they are able to detect the number of coordinates on which $f$ differs from $f_0$.
+Our last axiom will generalize this comportment.
 %
 %
 \begin{defn}[Axiom (A3)]\label{Def:InfiniteCartesian}
@@ -814,7 +814,7 @@ Then if $G$ is a group acting by isometries on $X$ with a bounded orbit, it has 
 \end{prop}
 %
 %
-Exemples of complete metric spaces satisfying Proposition~\ref{Proposition:Mediane} include among others: Hilbert spaces, Bruhat-Tits Buildings, Hadamard spaces (i.e. complete CAT(0) spaces and in particular CAT(0) cube complexes which are either finite dimensional or locally finite), trees and $\R$-trees; with the caveat that for trees and $\R$-trees, the fixed point is either a vertex or the middle of an edge.
+Examples of complete metric spaces satisfying Proposition~\ref{Proposition:Mediane} include among others: Hilbert spaces, Bruhat-Tits Buildings, Hadamard spaces (i.e. complete CAT(0) spaces and in particular CAT(0) cube complexes which are either finite dimensional or locally finite), trees and $\R$-trees; with the caveat that for trees and $\R$-trees, the fixed point is either a vertex or the middle of an edge.
 See~\cite[Chapter 3.b]{MR1023471} and the references therein for more on this subject.
 On the other hand,~\cite[Lemma 2.2.7]{MR2415834} gives a simple proof of the existence of a center for bounded subsets of Hilbert spaces, and more generally of reflexive Banach spaces, but this also directly follows from the Ryll-Nardzewski fixed-point theorem.
 Finally, properties \FS{} and \BS{} are equivalent for the category of separable  uniformly  convex Banach  spaces by the existence of the Chebyshev center of a (nonempty) bounded set.
@@ -862,7 +862,7 @@ All the statements and the proofs remain true for \CatS{} a subcategory of $\cat
 
 On the other hand, we can define property~\BS{} for any category \CatS{} over \PMet, that is for any category~\CatS{} endowed with a faithful functor $F\colon\CatS\to \PMet$.
 Such a couple $(\CatS,F\colon\CatS\to \PMet)$ is sometimes called a \emph{structure over \PMet}, and $F$ is said to be \emph{forgetful}.
-In this context, we need to be careful to define Cartesian powers (Definitions~\ref{Def:Cartesian} and~\ref{Def:InfiniteCartesian}) using $F$, but appart for that all the statements and all the proofs remaine unchanged.
+In this context, we need to be careful to define Cartesian powers (Definitions~\ref{Def:Cartesian} and~\ref{Def:InfiniteCartesian}) using $F$, but apart for that all the statements and all the proofs remain unchanged.
 An example of such an \CatS{} that cannot be expressed as a subcategory of \PMet{} is the category of edge-labeled graphs, where the morphisms are graph morphisms that induce a permutation on the set of labels.
 However, in this case the property~\BS{} is equivalent to the Bergman's property.
 
@@ -904,7 +904,7 @@ A group $G$ has property B$\mathbf{S}_\kappa$ if and only if $\lvert G\rvert<\ka
 %\end{prop}
 %%
 %%
-%Exemples of complete metric spaces satisfying Proposition~\ref{Proposition:Mediane} include among others: Hilbert spaces, Bruhat-Tits Buildings, Hadamard spaces (i.e. complete CAT(0) spaces), trees and $\R$-trees; with the caveat that for ($\R$-)trees, the fixed point is either a vertex or the middle of an edge.
+%Examples of complete metric spaces satisfying Proposition~\ref{Proposition:Mediane} include among others: Hilbert spaces, Bruhat-Tits Buildings, Hadamard spaces (i.e. complete CAT(0) spaces), trees and $\R$-trees; with the caveat that for ($\R$-)trees, the fixed point is either a vertex or the middle of an edge.
 %See~\cite[Chapter 3.b]{MR1023471} and the references therein for more on this subject.
 %On the other hand,~\cite[Lemma 2.2.7]{MR2415834} gives a simple proof of the existence of a center for bounded subsets of Hilbert spaces, and more generally of reflexive Banach spaces.
 %
@@ -1228,7 +1228,7 @@ is in the $G\wr_XH$-orbit of $f_0$. By axiome (A3) this orbit is unbounded and $
 %On the other hand, both the forest structure on $\powerset{\bigsqcup_XG}$ and the ultrametric structure on $\bigoplus_XG$ are in general not invariant under the natural action of $H$ by permutations.
 
 As a direct corollary, we obtain that if property \BS{} implies property \BS' for some \CatS' with non-trivial group actions and (A3) (example: \BS'=\FW), then the conclusion of Lemma~\ref{Lemma:XFinite} holds even if \CatS{} might not satisfy its premises.
-At contrario, it follows from Theorem~\ref{Thm:FACK} and Proposition~\ref{Prop:UncCoun} that Lemma~\ref{Lemma:XFinite} do not holds for property~\FR, property \FA{} or having uncountable cofinality.
+Conversely, it follows from Theorem~\ref{Thm:FACK} and Proposition~\ref{Prop:UncCoun} that Lemma~\ref{Lemma:XFinite} do not holds for property~\FR, property \FA{} or having uncountable cofinality.
 %
 %
 %\begin{rem}\label{Rem:Actionsb}
@@ -1243,7 +1243,7 @@ At contrario, it follows from Theorem~\ref{Thm:FACK} and Proposition~\ref{Prop:U
 %
 
 We now turn our attention to properties that behave well under finite Cartesian products in the sense of axiom (A2).
-We first describe the comportement of property~\BS{} under finite index subgroups.
+We first describe the comportment of property~\BS{} under finite index subgroups.
 %
 %
 \begin{lem}\label{Lemma:Subgroup}
@@ -1326,7 +1326,7 @@ Let us suppose that $G$ has countable cofinality. By Lemma~\ref{Lemma:CofSub}, t
 But then we have the primitive action of the wreath product $G\wr_XH$ on $G^X\cong\prod_XG$, which preserves $\bigoplus_XG$.
 It is easy to check that the map $d_\infty\colon\bigoplus_XG\times\bigoplus_XG\to\R$ defined by $d_\infty(\psi_1,\psi_2)\coloneqq\max\setst{d\bigl(\psi_1(x),\psi_2(x)\bigr)}{x\in X}$ is a $G\wr_XH$-invariant ultrametric.
 Finally, let $g_0\in G$ be an element of unbounded $G$-orbit for $d$ and let $x_0$ be any element of $X$.
-For $g$ in $G$ and $x$ in $X$, we define the following analogs of Kronecker's delta functions
+For $g$ in $G$ and $x$ in $X$, we define the following analog of Kronecker's delta functions
 \begin{equation*}
 \delta_x^g (y) \coloneqq
 \begin{cases}
