--- a/Property FW and wreath products/Medians/Enseignement Math/MedianV4.tex
+++ b/Property FW and wreath products/Medians/Enseignement Math/MedianV4.tex
@@ -193,7 +193,7 @@ Observe that our statement of Theorem~\ref{Thm:FACK} differs of the original sta
 Indeed, where we ask $G$ to have uncountable cofinality and no quotient isomorphic to $\Z$, the authors of~\cite{MR2764930} ask $G$ to have uncountable cofinality and finite abelianization.
 However, these two sets of conditions are equivalent.
 One implication is trivial, as finite Abelian groups do not project onto $\Z$.
-For the other implication, suppose that $G$ has uncountable cofinality but infinite abelianization $G/[G,G]$. The group $G/[G,G]$ being an infinite Abelian group, it has a countably infinite quotient $A$ that has uncountable cofinality, see Lemma~\ref{Lem:Quotient}. We conclude that $A$ is an infinite finitely generated Abelian group and therefore projects onto $\Z$.
+For the other implication, suppose that $G$ has uncountable cofinality but infinite abelianization $G/[G,G]$. The group $G/[G,G]$ being an infinite Abelian group, it has a countably infinite quotient $A$ --- a classical fact that Y. de Cornulier kindly reminded us, see \cite{MR551496}[§16.11.c)] for a proof. The quotient $A$ has uncountable cofinality, see Lemma~\ref{Lemma:Quotient} and is therefore an infinite finitely generated Abelian group, which hence projects onto $\Z$.
 %The other implication follows for countable Abelian groups from the structure theorem of finitely generated Abelian groups.
 %For the general case, Y. Cornulier kindly reminded us that any infinite Abelian group has a countable quotient; the conclusion hence follows from the countable case.
 
