--- a/Property FW and wreath products/Medians/Enseignement Math/biblio.bib
+++ b/Property FW and wreath products/Medians/Enseignement Math/biblio.bib
@@ -464,3 +464,20 @@ MRREVIEWER = {Murray J. Elder},
        DOI = {10.2140/agt.2004.4.297},
        URL = {https://doi.org/10.2140/agt.2004.4.297},
 }
+
+@book {MR551496,
+    AUTHOR = {Hewitt, Edwin and Ross, Kenneth A.},
+     TITLE = {Abstract harmonic analysis. {V}ol. {I}},
+    SERIES = {Grundlehren der Mathematischen Wissenschaften [Fundamental
+              Principles of Mathematical Sciences]},
+    VOLUME = {115},
+   EDITION = {Second},
+      NOTE = {Structure of topological groups, integration theory, group
+              representations},
+ PUBLISHER = {Springer-Verlag, Berlin-New York},
+      YEAR = {1979},
+     PAGES = {ix+519},
+      ISBN = {3-540-09434-2},
+   MRCLASS = {43-02 (22-01)},
+  MRNUMBER = {551496},
+}
